--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>UTTU PORTFOLIO</title>
-  <link rel="stylesheet" href="style.css"> 
-  <link rel="stylesheet" href="./css/all.css">
-  <link rel="stylesheet" href="./Personal-portfolio/css/all.css">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../Personal-portfolio2/style.css"> 
+  <link rel="stylesheet" href="../Personal-portfolio2/css/all.css">
+  <link rel="stylesheet" href="../Personal-portfolio2/css/all.min.css">
   <script src="./script.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -477,12 +476,12 @@
       </div>
 
       <div class="card3" style="width: 18rem;height: 25rem;">
-        <img src="..." class="card-img-top" alt="...">
+     <!----   <img src="..." class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text"></p>
           <a href="#" class="btn btn-primary"data-aos=fade-up-right >Project Details</a>
-        </div>
+        </div>-->
       </div>
 
 
