--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UTTU PORTFOLIO</title> 
+  <title>UTTU PORTFOLIO</title>
+  <link rel="stylesheet" href="../Personal-portfolio2/style.css"> 
   <link rel="stylesheet" href="../Personal-portfolio2/css/all.css">
   <link rel="stylesheet" href="../Personal-portfolio2/css/all.min.css">
-  <link rel="stylesheet" href="./phone.css">
+  
   <script src="./script.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
