--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="../Personal-portfolio2/style.css"> 
   <link rel="stylesheet" href="../Personal-portfolio2/css/all.css">
   <link rel="stylesheet" href="../Personal-portfolio2/css/all.min.css">
-  <link rel="stylesheet" href="./phone.css">
+  
   <script src="./script.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -24,7 +24,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Gwendolyn:wght@700&display=swap');
   </style>
   <script src="https://use.fontawesome.com/040434fe5b.js"></script>
-  
+  <link rel="stylesheet" media="screen and (max-width:760px)"href="./phone.css">
 
 </head>
 
