--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>UTTU PORTFOLIO</title>
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="../Personal-portfolio2/style.css"> 
   <link rel="stylesheet" href="../Personal-portfolio2/css/all.css">
   <link rel="stylesheet" href="../Personal-portfolio2/css/all.min.css">
@@ -24,7 +25,8 @@
     @import url('https://fonts.googleapis.com/css2?family=Gwendolyn:wght@700&display=swap');
   </style>
   <script src="https://use.fontawesome.com/040434fe5b.js"></script>
-  <link rel="stylesheet" media="screen and (max-width:760px)"href="./phone.css">
+  <link rel="stylesheet" media="screen and (max-width:480px)" href="./phone.css">
+ 
 
 </head>
 
